--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         </div>
 
     </header>
-
+    <div class="Logo">
     <img src="img/Logo.svg">
-
+    </div>
     <!------------------------Slogan---------------------->
     <div class="company">
         <h1>We are the company that will</h1>
