--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="Video" id="video">
         <div class="Tekst-Video">
             <h1>Video</h1>
+            <p>This is our interview in which we interviewed a police man and a military man</p>
         </div>
         <div class="container">
             <div class="row">
