--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
     </section>
     <div class="Video" id="video">
         <div class="Tekst-Video">
-            <h1>Video</h1>
-            <p>This is our interview in which we interviewed a police man and a military man</p>
+            <h1>Video</h1>  
+        </div>
+        <div class="Alinea-Video">
+        <p>This is our interview in which we interviewed a police man and a military man</p>
         </div>
         <div class="container">
             <div class="row">
