--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
     </div>
     </section>
     <div class="Video" id="video">
-        <div class="Tekst-Video">    
+        <div class="Tekst-Video">
+            <h1>Video</h1>
         </div>
         <div class="container">
             <div class="row">
