--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div class="Tekst-Video">
             <h1>Video</h1>
         </div>
+        <p>A interview about a police man and a ex-militair</p>
         <div class="container">
             <div class="row">
                 <div class="col">
